Adding congif.yml for CircleCI and upgrading to Java 11